--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -163,7 +163,7 @@
           icon: 'error',
           text: message,
           color: 'white',
-          background: '#080808'
+          background: '#080808',
         })
       }
     })
