--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -21,6 +21,32 @@
     const baseApi = 'https://localhost:7091/api/Users'
     $(document).ready(() => {
 
+      ///Artists////
+      const renderArtists = () => {
+        if (localStorage.artists == undefined)
+          ajaxCall("GET", baseApiOfek + `/Artists`, "", successCBAllArtists, errorCB);
+        else {
+          const artistsDiv = document.getElementById("artists");
+          const data = JSON.parse(localStorage.artists);
+          for (let artist of data) {
+            artistsDiv.innerHTML += `<div class="artist">
+    <div class="flipper">
+      <div class="front">
+        <img src=${artist.image}>
+      </div>
+      <div class="back">
+        <h4>${artist.name}</h4>
+        <p>published: ${artist.published}</p>
+        <p>listeners: ${artist.listeners}</p>
+        <p>playcount: ${artist.playcount}</p>
+      </div>
+    </div>
+  </div>`;
+          }
+        }
+      }
+      renderArtists();
+
       ////////////////////////login and register///////////////////
       let updateLoginPage = (page) => {
         $("#mainFormDiv").html("");
@@ -230,12 +256,64 @@
         background: '#080808'
       })
     }
+
+    ///////////Artists/////////////////
+    const lastfmBaseAPi = "http://ws.audioscrobbler.com/2.0";
+    const lastfmKey = "d6293ebc904c9f3e71bf638f0b55a5f6";
+
+    const getArtistDetails = (artistName) => {
+      const api = `${lastfmBaseAPi}/?method=artist.getinfo&artist=${artistName}&api_key=${lastfmKey}&format=json`;
+      return new Promise((resolve, reject) => {
+        ajaxCall("GET", api, "", (data) => {
+          const artistObj = data.artist;
+          const name = artistObj.name;
+          const summary = artistObj.bio.summary;
+          const image = artistObj.image[2]["#text"];
+          const listeners = artistObj.stats.listeners;
+          const playcount = artistObj.stats.playcount;
+          const published = artistObj.bio.published.split(",")[0];
+          const res = { name, summary, image, listeners, playcount, published };
+
+          resolve(res);
+        }, reject);
+      });
+    };
+
+    function successCBAllArtists(data) {
+      const artistsDiv = document.getElementById("artists");
+      const artistsArr = [];
+      for (let artist of data) {
+        getArtistDetails(artist.name)
+          .then((res) => {
+            artistsArr.push(res);
+            artistsDiv.innerHTML += `<div class="artist">
+    <div class="flipper">
+      <div class="front">
+        <img src=${res.image}>
+      </div>
+      <div class="back">
+        <h4>${res.name}</h4>
+        <p>published: ${res.published}</p>
+        <p>listeners: ${res.listeners}</p>
+        <p>playcount: ${res.playcount}</p>
+      </div>
+    </div>
+  </div>`;
+          })
+          .catch((error) => {
+            errorCB(error);
+          })
+          .finally(() => {
+            console.log("finish");
+          })
+          ;
+      }
+    }
   </script>
 
 </head>
 
 <body>
-
   <!-- notification for small viewports and landscape oriented smartphones -->
   <div class="device-notification">
     <a class="device-notification--logo" href="#0">
@@ -365,19 +443,13 @@
               </div>
             </li>
             <li class="l-section section">
-              <div class="contact">
-                <div class="contact--lockup">
-                  <div class="modal">
-                    <div class="modal--information">
-                      <p>Pawia 5, 31-154 Kraków, Poland</p>
-                      <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                      <a href="tel:+148126287560">+48 12 628 75 60</a>
-                    </div>
-                    <ul class="modal--options">
-                      <li><a href="#0">Bēhance</a></li>
-                      <li><a href="#0">dribbble</a></li>
-                      <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
-                    </ul>
+              <div class="about">
+                <div class="about--banner">
+                  <h2>Artists</h2>
+                </div>
+                <div id="artistsContainer">
+                  <div id="artists">
+
                   </div>
                 </div>
               </div>
